--- a/cPaciente.csproj
+++ b/cPaciente.csproj
@@ -8,10 +8,11 @@
     <OutputType>WinExe</OutputType>
     <RootNamespace>cPaciente</RootNamespace>
     <AssemblyName>cPaciente</AssemblyName>
-    <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <Deterministic>true</Deterministic>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -46,8 +47,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Controller\ConexionDatos.cs" />
+    <Compile Include="Controller\InicioSesion.cs" />
+    <Compile Include="Controller\Usuarios.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="View\FormLogin.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="View\FormLogin.designer.cs">
+      <DependentUpon>FormLogin.cs</DependentUpon>
+    </Compile>
     <Compile Include="View\Medico\FormBase.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -120,6 +130,42 @@
     <Compile Include="View\Medico\FormConsulta.Designer.cs">
       <DependentUpon>FormConsulta.cs</DependentUpon>
     </Compile>
+    <Compile Include="View\Secretaria\FormBase.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="View\Secretaria\FormBase.Designer.cs">
+      <DependentUpon>FormBase.cs</DependentUpon>
+    </Compile>
+    <Compile Include="View\Secretaria\FormCitas.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="View\Secretaria\FormCitas.Designer.cs">
+      <DependentUpon>FormCitas.cs</DependentUpon>
+    </Compile>
+    <Compile Include="View\Secretaria\FormInicio.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="View\Secretaria\FormInicio.Designer.cs">
+      <DependentUpon>FormInicio.cs</DependentUpon>
+    </Compile>
+    <Compile Include="View\Secretaria\FormPacientes.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="View\Secretaria\FormPacientes.Designer.cs">
+      <DependentUpon>FormPacientes.cs</DependentUpon>
+    </Compile>
+    <Compile Include="View\Secretaria\FormPerfil.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="View\Secretaria\FormPerfil.Designer.cs">
+      <DependentUpon>FormPerfil.cs</DependentUpon>
+    </Compile>
+    <Compile Include="View\Secretaria\RegistroCitas.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="View\Secretaria\RegistroCitas.Designer.cs">
+      <DependentUpon>RegistroCitas.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -128,7 +174,11 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="View\FormLogin.resx">
+      <DependentUpon>FormLogin.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="View\Medico\FormBase.bin.resx">
       <DependentUpon>FormBase.cs</DependentUpon>
     </EmbeddedResource>
@@ -171,6 +221,24 @@
     <EmbeddedResource Include="View\Medico\FormConsulta.resx">
       <DependentUpon>FormConsulta.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="View\Secretaria\FormBase.resx">
+      <DependentUpon>FormBase.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="View\Secretaria\FormCitas.resx">
+      <DependentUpon>FormCitas.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="View\Secretaria\FormInicio.resx">
+      <DependentUpon>FormInicio.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="View\Secretaria\FormPacientes.resx">
+      <DependentUpon>FormPacientes.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="View\Secretaria\FormPerfil.resx">
+      <DependentUpon>FormPerfil.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="View\Secretaria\RegistroCitas.resx">
+      <DependentUpon>RegistroCitas.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -185,9 +253,16 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Controller\" />
     <Folder Include="Model\" />
-    <Folder Include="View\Secretaria\" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\LogoCPaciente.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\diskette %282%29.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\back.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
