Formulario para agregar empleado creado, se muestran datos enlas ventanas de clinica y de gestion de personal

--- a/cPaciente.csproj
+++ b/cPaciente.csproj
@@ -47,11 +47,19 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Controller\Clinica.cs" />
     <Compile Include="Controller\ConexionDatos.cs" />
     <Compile Include="Controller\InicioSesion.cs" />
+    <Compile Include="Controller\Personal.cs" />
     <Compile Include="Controller\Usuarios.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="View\Admin\FormRegistroEmpleado.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="View\Admin\FormRegistroEmpleado.Designer.cs">
+      <DependentUpon>FormRegistroEmpleado.cs</DependentUpon>
+    </Compile>
     <Compile Include="View\FormLogin.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -176,6 +184,9 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="View\Admin\FormRegistroEmpleado.resx">
+      <DependentUpon>FormRegistroEmpleado.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="View\FormLogin.resx">
       <DependentUpon>FormLogin.cs</DependentUpon>
     </EmbeddedResource>
@@ -263,6 +274,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\back.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\frame.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
